Stuck footer to bottom of page, adjusted page layout one text, fixed woocommerce info notice overlap

--- a/tailwind/custom/components/components.css
+++ b/tailwind/custom/components/components.css
@@ -43,3 +43,15 @@ $(post-title-selector) {
 	/* Content width from the `theme.json` file */
 	@apply mx-auto;
 }
+
+.wp-site-blocks {
+	position: relative;
+	min-height: 100vh;
+	padding-bottom: 4rem;
+}
+
+.footer {
+	position: absolute;
+	bottom: 0;
+	width: 100%;
+}
